# Dock

./: .cirrus.yml  CMakeLists.txt  README.md  applicationitem.h  applicationmodel.cpp  applicationmodel.h  cyber-dock.pro  main.cpp  mainwindow.cpp  mainwindow.h  qml.qrc  resources.qrc  xwindowinterface.cpp  xwindowinterface.h
qml/: AppItem.qml  AppItemDelegate.qml  DockItem.qml  Menu.qml  PopupTips.qml  main.qml
src/: applicationitem.h  applicationmodel.cpp  applicationmodel.h  docksettings.cpp  docksettings.h  iconthemeimageprovider.cpp  main.cpp  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  popuptips.cpp  popuptips.h  processprovider.cpp  processprovider.h  systemappitem.cpp  systemappitem.h  systemappmonitor.cpp  systemappmonitor.h  trashmanager.cpp  trashmanager.h  utils.cpp  utils.h  waylandinterface.cpp  waylandinterface.h  xwindowinterface.cpp  xwindowinterface.h
